# fuzzy-sets

./: README.md  main.py  pyproject.toml
outputs/: PROJECT_SUMMARY.md  centers_raw.csv  centers_std.csv  cluster_quality_summary.csv  feature_stats.csv  kmeans_inertia_by_k.csv  kmeans_metrics_by_k.csv  kmeans_summary.json  labels.npy  membership_params.csv  membership_params.json  membership_params_gaussian.csv  membership_params_gaussian.json  membership_params_trapezoidal.json  membership_params_triangular.csv  membership_params_triangular.json  run_config.json
src/: __init__.py  data.py  fuzzy_mf.py  kmeans.py  viz.py
