[project]
name = "fuzzy-sets"
version = "0.1.0"
description = "K-means clustering with automatic fuzzy membership function construction on Wine Quality dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
fuzzy-sets = "main:main"
